[gd_scene load_steps=53 format=3 uid="uid://g2kvnnn3epf6"]

[ext_resource type="Texture2D" uid="uid://t1obe0j4sfyp" path="res://themes/UI_images/PetScreenBG.png" id="1_2p0jb"]
[ext_resource type="Script" uid="uid://cc46gh6ja3sis" path="res://scripts/pet_screen.gd" id="1_o0tny"]
[ext_resource type="Texture2D" uid="uid://v1bwbw1r7o33" path="res://themes/UI_images/BottomButtonsUI2.png" id="2_ase27"]
[ext_resource type="Texture2D" uid="uid://bow233oflyaw" path="res://themes/UI_images/cowIconNormal.png" id="3_f2w6a"]
[ext_resource type="Texture2D" uid="uid://1g2njstdjihl" path="res://themes/UI_images/cowIconHover.png" id="3_r5u0e"]
[ext_resource type="Texture2D" uid="uid://ch6yqus3g2mu8" path="res://themes/UI_images/bunnyIconNormal.png" id="4_00xwa"]
[ext_resource type="Texture2D" uid="uid://cxpvneotg8752" path="res://themes/UI_images/bunnyIconHover.png" id="5_6c7hk"]
[ext_resource type="Texture2D" uid="uid://cesnqosmid6yx" path="res://themes/UI_images/goldIcon.png" id="5_blg12"]
[ext_resource type="FontFile" uid="uid://bk0q2iocadv0a" path="res://themes/font/Minecraft.ttf" id="6_ntaer"]
[ext_resource type="Texture2D" uid="uid://dp3jpigm67tra" path="res://themes/UI_images/pigIconNormal.png" id="7_6c7hk"]
[ext_resource type="Texture2D" uid="uid://cc0dh82ipsedv" path="res://themes/UI_images/pigIconHover.png" id="7_cgsjp"]
[ext_resource type="Texture2D" uid="uid://di8iu35l1emb4" path="res://themes/UI_images/redPandaIconNormal.png" id="10_pbg7p"]
[ext_resource type="Texture2D" uid="uid://d1aj5owgs51aa" path="res://themes/UI_images/dogIconHover.png" id="10_q58k5"]
[ext_resource type="Texture2D" uid="uid://5dtfbi0fywlr" path="res://themes/UI_images/dogIconNormal.png" id="11_mq5kj"]
[ext_resource type="Texture2D" uid="uid://c2hxhw78iew14" path="res://themes/UI_images/redPandaIconHover.png" id="12_xpp1m"]
[ext_resource type="FontFile" uid="uid://dqo1seqimy8j5" path="res://resources/pixel_sans.ttf" id="14_xpp1m"]
[ext_resource type="Texture2D" uid="uid://vsxbuve11bwf" path="res://themes/UI_images/profileUI-petScreen.png" id="15_o0tny"]
[ext_resource type="Texture2D" uid="uid://dfvkwar5qvqna" path="res://themes/UI_images/Ui.png" id="18_etsf6"]
[ext_resource type="AudioStream" uid="uid://b8l75uny4mxhh" path="res://assets/soundFX/btn_click.mp3" id="19_qes1e"]

[sub_resource type="Theme" id="Theme_ntaer"]
default_font = ExtResource("14_xpp1m")
default_font_size = 6

[sub_resource type="Theme" id="Theme_etsf6"]

[sub_resource type="Theme" id="Theme_21jr3"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dpbx4"]
texture = ExtResource("5_6c7hk")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pbg7p"]
texture = ExtResource("5_6c7hk")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_68ubm"]
texture = ExtResource("4_00xwa")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_r5u0e"]
texture = ExtResource("4_00xwa")

[sub_resource type="Theme" id="Theme_blg12"]

[sub_resource type="Theme" id="Theme_00xwa"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1mydy"]
texture = ExtResource("3_r5u0e")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cgsjp"]
texture = ExtResource("3_r5u0e")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_blg12"]
texture = ExtResource("3_f2w6a")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_21jr3"]
texture = ExtResource("3_f2w6a")

[sub_resource type="Theme" id="Theme_cgsjp"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_j0pk6"]
texture = ExtResource("7_cgsjp")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_q58k5"]
texture = ExtResource("7_cgsjp")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mq5kj"]
texture = ExtResource("7_6c7hk")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ddtwc"]
texture = ExtResource("7_6c7hk")

[sub_resource type="Theme" id="Theme_o0tny"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2s8hd"]
texture = ExtResource("10_q58k5")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ntaer"]
texture = ExtResource("10_q58k5")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_etsf6"]
texture = ExtResource("11_mq5kj")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qes1e"]
texture = ExtResource("11_mq5kj")

[sub_resource type="Theme" id="Theme_68ubm"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_y2p55"]
texture = ExtResource("12_xpp1m")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fwnjs"]
texture = ExtResource("12_xpp1m")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_n5p3l"]
texture = ExtResource("10_pbg7p")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xpp1m"]
texture = ExtResource("10_pbg7p")

[sub_resource type="Theme" id="Theme_qes1e"]
default_font = ExtResource("14_xpp1m")
default_font_size = 4

[sub_resource type="Theme" id="Theme_fwnjs"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ifh5s"]
texture = ExtResource("18_etsf6")
expand_margin_left = 10.0
expand_margin_right = 10.0
region_rect = Rect2(441, 288, 33, 16)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gstpi"]
texture = ExtResource("18_etsf6")
expand_margin_left = 10.0
expand_margin_right = 10.0
region_rect = Rect2(441, 352, 32, 16)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tx00f"]
texture = ExtResource("18_etsf6")
expand_margin_left = 10.0
expand_margin_right = 10.0
region_rect = Rect2(441, 352, 32, 16)

[node name="PetScreen" type="Node2D"]
script = ExtResource("1_o0tny")

[node name="Organizer" type="CanvasLayer" parent="."]

[node name="CenterBG" type="HBoxContainer" parent="Organizer"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.456
anchor_right = 0.5
anchor_bottom = 0.456
offset_left = -109.0
offset_top = -95.96
offset_right = 158.0
offset_bottom = 91.04
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Organizer/CenterBG"]
layout_mode = 2
texture = ExtResource("1_2p0jb")

[node name="UITop" type="HBoxContainer" parent="Organizer"]
offset_left = -5.0
offset_right = 85.0
offset_bottom = 40.0
size_flags_horizontal = 4
theme = SubResource("Theme_ntaer")
alignment = 1

[node name="ProfileUI" type="TextureRect" parent="Organizer/UITop"]
layout_mode = 2
texture = ExtResource("15_o0tny")

[node name="Gold" type="VBoxContainer" parent="Organizer/UITop/ProfileUI"]
layout_direction = 2
layout_mode = 2
offset_left = 34.0
offset_top = 9.0
offset_right = 60.0
offset_bottom = 17.0
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="txt" type="Label" parent="Organizer/UITop/ProfileUI/Gold"]
visible = false
layout_mode = 2
text = "Gold"

[node name="value" type="Label" parent="Organizer/UITop/ProfileUI/Gold"]
layout_mode = 2
theme = SubResource("Theme_etsf6")
theme_override_fonts/font = ExtResource("6_ntaer")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PetContainer" type="HBoxContainer" parent="Organizer"]
offset_left = 7.0
offset_top = 40.0
offset_right = 142.0
offset_bottom = 163.0

[node name="UIBottom" type="HBoxContainer" parent="Organizer"]
offset_left = -65.0
offset_top = 129.0
offset_right = 160.0
offset_bottom = 161.0

[node name="BottomUI" type="TextureRect" parent="Organizer/UIBottom"]
layout_mode = 2
texture = ExtResource("2_ase27")

[node name="bunny" type="Button" parent="Organizer/UIBottom/BottomUI"]
layout_mode = 0
offset_left = 68.0
offset_top = 6.0
offset_right = 84.0
offset_bottom = 27.0
theme = SubResource("Theme_21jr3")
theme_override_font_sizes/font_size = 4
theme_override_styles/disabled = SubResource("StyleBoxTexture_dpbx4")
theme_override_styles/hover = SubResource("StyleBoxTexture_pbg7p")
theme_override_styles/pressed = SubResource("StyleBoxTexture_68ubm")
theme_override_styles/normal = SubResource("StyleBoxTexture_r5u0e")

[node name="price" type="Label" parent="Organizer/UIBottom/BottomUI/bunny"]
layout_mode = 0
offset_left = 2.0
offset_top = 14.0
offset_right = 10.0
offset_bottom = 21.0
theme = SubResource("Theme_blg12")
theme_override_fonts/font = ExtResource("6_ntaer")
theme_override_font_sizes/font_size = 4
text = "100"
vertical_alignment = 1

[node name="coin" type="TextureRect" parent="Organizer/UIBottom/BottomUI/bunny/price"]
layout_mode = 0
offset_left = 8.0
offset_right = 12.0
offset_bottom = 5.0
texture = ExtResource("5_blg12")
expand_mode = 4

[node name="cow" type="Button" parent="Organizer/UIBottom/BottomUI"]
layout_mode = 0
offset_left = 85.0
offset_top = 6.0
offset_right = 101.0
offset_bottom = 27.0
theme = SubResource("Theme_00xwa")
theme_override_font_sizes/font_size = 4
theme_override_styles/disabled = SubResource("StyleBoxTexture_1mydy")
theme_override_styles/hover = SubResource("StyleBoxTexture_cgsjp")
theme_override_styles/pressed = SubResource("StyleBoxTexture_blg12")
theme_override_styles/normal = SubResource("StyleBoxTexture_21jr3")

[node name="price" type="Label" parent="Organizer/UIBottom/BottomUI/cow"]
layout_mode = 0
offset_left = 2.0
offset_top = 14.0
offset_right = 10.0
offset_bottom = 21.0
theme = SubResource("Theme_blg12")
theme_override_fonts/font = ExtResource("6_ntaer")
theme_override_font_sizes/font_size = 4
text = "200"
vertical_alignment = 1

[node name="coin" type="TextureRect" parent="Organizer/UIBottom/BottomUI/cow/price"]
layout_mode = 0
offset_left = 8.0
offset_right = 12.0
offset_bottom = 5.0
texture = ExtResource("5_blg12")
expand_mode = 4

[node name="pig" type="Button" parent="Organizer/UIBottom/BottomUI"]
layout_mode = 0
offset_left = 102.0
offset_top = 6.0
offset_right = 118.0
offset_bottom = 25.0
theme = SubResource("Theme_cgsjp")
theme_override_font_sizes/font_size = 4
theme_override_styles/disabled = SubResource("StyleBoxTexture_j0pk6")
theme_override_styles/hover = SubResource("StyleBoxTexture_q58k5")
theme_override_styles/pressed = SubResource("StyleBoxTexture_mq5kj")
theme_override_styles/normal = SubResource("StyleBoxTexture_ddtwc")

[node name="price" type="Label" parent="Organizer/UIBottom/BottomUI/pig"]
layout_mode = 0
offset_left = 3.0
offset_top = 14.0
offset_right = 11.0
offset_bottom = 21.0
theme = SubResource("Theme_blg12")
theme_override_fonts/font = ExtResource("6_ntaer")
theme_override_font_sizes/font_size = 4
text = "300"
vertical_alignment = 1

[node name="coin" type="TextureRect" parent="Organizer/UIBottom/BottomUI/pig/price"]
layout_mode = 0
offset_left = 8.0
offset_right = 12.0
offset_bottom = 5.0
texture = ExtResource("5_blg12")
expand_mode = 4

[node name="dog" type="Button" parent="Organizer/UIBottom/BottomUI"]
layout_mode = 0
offset_left = 119.0
offset_top = 6.0
offset_right = 135.0
offset_bottom = 25.0
theme = SubResource("Theme_o0tny")
theme_override_styles/disabled = SubResource("StyleBoxTexture_2s8hd")
theme_override_styles/hover = SubResource("StyleBoxTexture_ntaer")
theme_override_styles/pressed = SubResource("StyleBoxTexture_etsf6")
theme_override_styles/normal = SubResource("StyleBoxTexture_qes1e")

[node name="price" type="Label" parent="Organizer/UIBottom/BottomUI/dog"]
layout_mode = 0
offset_left = 3.0
offset_top = 14.0
offset_right = 11.0
offset_bottom = 21.0
theme = SubResource("Theme_blg12")
theme_override_fonts/font = ExtResource("6_ntaer")
theme_override_font_sizes/font_size = 4
text = "500"
vertical_alignment = 1

[node name="coin" type="TextureRect" parent="Organizer/UIBottom/BottomUI/dog/price"]
layout_mode = 0
offset_left = 8.0
offset_right = 12.0
offset_bottom = 5.0
texture = ExtResource("5_blg12")
expand_mode = 4

[node name="redPanda" type="Button" parent="Organizer/UIBottom/BottomUI"]
layout_mode = 0
offset_left = 136.0
offset_top = 6.0
offset_right = 152.0
offset_bottom = 25.0
theme = SubResource("Theme_68ubm")
theme_override_styles/disabled = SubResource("StyleBoxTexture_y2p55")
theme_override_styles/hover = SubResource("StyleBoxTexture_fwnjs")
theme_override_styles/pressed = SubResource("StyleBoxTexture_n5p3l")
theme_override_styles/normal = SubResource("StyleBoxTexture_xpp1m")

[node name="price" type="Label" parent="Organizer/UIBottom/BottomUI/redPanda"]
layout_mode = 0
offset_left = 2.0
offset_top = 14.0
offset_right = 12.0
offset_bottom = 21.0
theme = SubResource("Theme_blg12")
theme_override_fonts/font = ExtResource("6_ntaer")
theme_override_font_sizes/font_size = 4
text = "800"
vertical_alignment = 1

[node name="coin" type="TextureRect" parent="Organizer/UIBottom/BottomUI/redPanda/price"]
layout_mode = 0
offset_left = 8.0
offset_right = 12.0
offset_bottom = 5.0
texture = ExtResource("5_blg12")
expand_mode = 4

[node name="click" type="AudioStreamPlayer2D" parent="Organizer/UIBottom/BottomUI"]
stream = ExtResource("19_qes1e")
volume_db = 1.0

[node name="UICenter" type="HBoxContainer" parent="Organizer"]
offset_left = 57.0
offset_top = 107.0
offset_right = 78.0
offset_bottom = 124.0
size_flags_horizontal = 8
size_flags_vertical = 4
theme = SubResource("Theme_qes1e")
alignment = 2

[node name="Back" type="Button" parent="Organizer/UICenter"]
layout_mode = 2
theme = SubResource("Theme_fwnjs")
theme_override_font_sizes/font_size = 6
theme_override_styles/hover = SubResource("StyleBoxTexture_ifh5s")
theme_override_styles/pressed = SubResource("StyleBoxTexture_gstpi")
theme_override_styles/normal = SubResource("StyleBoxTexture_tx00f")
text = "Back"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Organizer/UICenter"]
stream = ExtResource("19_qes1e")
volume_db = 1.0
pitch_scale = 0.66

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(2, 0)
limit_left = -100
limit_right = 302
limit_bottom = 600

[connection signal="pressed" from="Organizer/UIBottom/BottomUI/bunny" to="." method="_on_BunnyButton_pressed"]
[connection signal="pressed" from="Organizer/UIBottom/BottomUI/cow" to="." method="_on_CowButton_pressed"]
[connection signal="pressed" from="Organizer/UIBottom/BottomUI/pig" to="." method="_on_PigButton_pressed"]
[connection signal="pressed" from="Organizer/UIBottom/BottomUI/dog" to="." method="_on_DogButton_pressed"]
[connection signal="pressed" from="Organizer/UIBottom/BottomUI/redPanda" to="." method="_on_RedPandaButton_pressed"]
[connection signal="pressed" from="Organizer/UICenter/Back" to="." method="_on_back_pressed"]
